--- a/RestApiModelDDD.Infrastructure/RestApiModelDDD.Infrastructure.csproj
+++ b/RestApiModelDDD.Infrastructure/RestApiModelDDD.Infrastructure.csproj
@@ -115,11 +115,11 @@
     <Reference Include="Microsoft.Analytics.Types" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CrossCutting\IOC\ConfigurationIOC.cs" />
     <Compile Include="Data\AzureContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="CrossCutting\" />
     <Folder Include="Data\Repositorys\" />
   </ItemGroup>
   <ItemGroup>
@@ -131,6 +131,9 @@
       <Project>{607DB756-2E52-4C13-B412-6F5E87BA8D2F}</Project>
       <Name>RestApiModelDDD.Domain</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
