--- a/RestApiModelDDD.Domain.Services/RestApiModelDDD.Domain.Services.csproj
+++ b/RestApiModelDDD.Domain.Services/RestApiModelDDD.Domain.Services.csproj
@@ -43,7 +43,20 @@
     <Reference Include="Microsoft.Analytics.Types" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ServiceClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceBase.cs" />
+    <Compile Include="ServiceProduct.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RestApiModelDDD.Domain.Core\RestApiModelDDD.Domain.Core.csproj">
+      <Project>{C2D1D5FB-8FEE-4D25-B169-A7DC3CC284F1}</Project>
+      <Name>RestApiModelDDD.Domain.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RestApiModelDDD.Domain\RestApiModelDDD.Domain.csproj">
+      <Project>{607DB756-2E52-4C13-B412-6F5E87BA8D2F}</Project>
+      <Name>RestApiModelDDD.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
